fix: 修复swag识别 refactor: 项目列表
