# docs/swagger.yaml
@@ -1,21 +1,21 @@
 definitions:
-  admin.ListReportProjectsResponse:
+  admin.ListProjectsResponse:
     properties:
       data:
-        $ref: '#/definitions/admin.ListReportProjectsResponseData'
+        $ref: '#/definitions/admin.ListProjectsResponseData'
       error_msg:
         type: string
     type: object
-  admin.ListReportProjectsResponseData:
+  admin.ListProjectsResponseData:
     properties:
       results:
         items:
-          $ref: '#/definitions/admin.ListReportProjectsResponseDataResult'
+          $ref: '#/definitions/admin.ListProjectsResponseDataResult'
         type: array
       total:
         type: integer
     type: object
-  admin.ListReportProjectsResponseDataResult:
+  admin.ListProjectsResponseDataResult:
     properties:
       description:
         type: string
@@ -368,17 +368,43 @@ info:
 paths:
   /api/v1/admin/projects/report:
     get:
+      parameters:
+      - in: query
+        minimum: 1
+        name: current
+        type: integer
+      - in: query
+        maximum: 100
+        minimum: 1
+        name: size
+        type: integer
+      - enum:
+        - 0
+        - 1
+        - 2
+        in: query
+        name: status
+        type: integer
+        x-enum-varnames:
+        - ProjectStatusNormal
+        - ProjectStatusHidden
+        - ProjectStatusViolation
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/admin.ListReportProjectsResponse'
+            $ref: '#/definitions/admin.ListProjectsResponse'
       tags:
       - admin
   /api/v1/dashboard/stats/all:
     get:
+      parameters:
+      - description: request query
+        in: query
+        name: days
+        type: integer
       produces:
       - application/json
       responses:
@@ -452,6 +478,22 @@ paths:
       - oauth
   /api/v1/projects:
     get:
+      parameters:
+      - in: query
+        minimum: 1
+        name: current
+        type: integer
+      - in: query
+        maximum: 100
+        minimum: 1
+        name: size
+        type: integer
+      - collectionFormat: csv
+        in: query
+        items:
+          type: string
+        name: tags
+        type: array
       produces:
       - application/json
       responses:
@@ -593,6 +635,22 @@ paths:
       - project
   /api/v1/projects/mine:
     get:
+      parameters:
+      - in: query
+        minimum: 1
+        name: current
+        type: integer
+      - in: query
+        maximum: 100
+        minimum: 1
+        name: size
+        type: integer
+      - collectionFormat: csv
+        in: query
+        items:
+          type: string
+        name: tags
+        type: array
       produces:
       - application/json
       responses:
@@ -604,6 +662,16 @@ paths:
       - project
   /api/v1/projects/received:
     get:
+      parameters:
+      - in: query
+        minimum: 1
+        name: current
+        type: integer
+      - in: query
+        maximum: 100
+        minimum: 1
+        name: size
+        type: integer
       produces:
       - application/json
       responses:
